# MyProxyClient

./: .gitignore  .pydevproject  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: build-and-deploy-on-pypi.yml  run-tests.yml
documentation/: README.rst  conf.py  index.rst
documentation/_build/doctrees/: README.doctree  client.doctree  environment.pickle  index.doctree
documentation/_build/html/: .buildinfo  README.html  client.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
documentation/_build/html/_modules/: index.html
documentation/_build/html/_modules/myproxy/: client.html
documentation/_build/html/_sources/: README.txt
documentation/_build/latex/: MyProxyClient.aux  MyProxyClient.idx  MyProxyClient.ilg  MyProxyClient.ind  MyProxyClient.out  MyProxyClient.tex  MyProxyClient.toc
myproxy/: client.py  script.py
myproxy/client/utils/: __init__.py  openssl.py
myproxy/test/: Vagrantfile  test_myproxyclient.py
myproxy/utils/: __init__.py  openssl.py
tests/unit/: test_simple.py
