# MyProxy Client
#
# Configuration file for egg install
# 
# NERC DataGrid Project
# 
# P J Kershaw 27/10/06
# 
# Copyright (C) 2009 Science and Technology Facilities Council
# 
# BSD - See LICENSE file in top-level directory
[EasyInstall]

#[build_ext]
#include_dirs: /usr/local/
#library_dirs: /usr/local/

[egg_info]
tag_build = 

[metadata]
description-file = README.md
